tests/dataset/tpc-ds/compiler/java/q43.error
javac error: exit status 1
/tmp/TestJavaCompiler_TPCDSQueriesq43645028222/001/Q43.java:261: error: incompatible types: possible lossy conversion from double to int
    if (!(Objects.equals(result, Arrays.asList(new SStoreNameSStoreIdSunSalesMonSalesTueSalesWedSalesThuSalesFriSalesSatSales("Main", "S1", 10.000000, 20.000000, 30.000000, 40.000000, 50.000000, 60.000000, 70.000000))))) throw new AssertionError("expect failed");
                                                                                                                                            ^
Note: Some messages have been simplified; recompile with -Xdiags:verbose to get full output
1 error
